--- a/cursos.html
+++ b/cursos.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/global.css">
     <title>Cursos</title>
 </head>
 <body>
-    <h1>Curso</h1>
+    <header>
+        <div class="container">
+            <a href="index.html">
+                <img src="img/icons/3d-lilas.svg" class="logo">
+                <p>Axiz</p>
+            </a>
+            <a href="login.html">
+                <img src="img/icons/log-out-lilas.svg" class="logout">
+            </a>
+        </div>
+    </header>
 </body>
 </html>
+<script src="js/sessao.js"></script>
