Estruturando o html da tela Cursos, sendo select e escolha de curso

--- a/cursos.html
+++ b/cursos.html
@@ -19,6 +19,36 @@
             </a>
         </div>
     </header>
+
+    <section class="cursos">
+        <div class="container">
+            <div class="info">
+                <h2>Está precisando de um professor ?</h2>
+                <p>Entre em contato com uma das escolas mais reconhecidas do mercado!</p>
+            </div>
+            <select id="id_tema">
+                <option value="1">3D</option>
+                <option value="2">2D</option>
+            </select>
+
+            <div class="choose-course">
+                <div class="bt-curso">
+                    <img src="img/icons/zbrush-lilas.svg">
+                    <p>Zbrush</p>
+                </div>
+
+                <div class="bt-curso">
+                    <img src="img/icons/3d-lilas.svg">
+                    <p>Maya</p>
+                </div>
+
+                <div class="bt-curso">
+                    <img src="img/icons/lines-lilas.svg">
+                    <p>Texture</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 <script src="js/sessao.js"></script>
