Adicionando estilização da tela curso, e corrigindo classes na sobre e no global

--- a/cursos.html
+++ b/cursos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/course/style.css">
     <title>Cursos</title>
 </head>
 <body>
@@ -32,17 +33,17 @@
             </select>
 
             <div class="choose-course">
-                <div class="bt-curso">
+                <div class="bt-course">
                     <img src="img/icons/zbrush-lilas.svg">
                     <p>Zbrush</p>
                 </div>
 
-                <div class="bt-curso">
+                <div class="bt-course">
                     <img src="img/icons/3d-lilas.svg">
                     <p>Maya</p>
                 </div>
 
-                <div class="bt-curso">
+                <div class="bt-course">
                     <img src="img/icons/lines-lilas.svg">
                     <p>Texture</p>
                 </div>
