--- a/sobre.html
+++ b/sobre.html
@@ -25,7 +25,7 @@
 
     <section class="sobre">
         <div class="container">
-            <div class="start">
+            <div class="info">
                 <h2>Conheça melhor a computação gráfica</h2>
                 <p>Nessa página temos uma trilha com expliações e curiosidades sobre o mundo da computação gráfica</p>
             </div>
