Corrigindo outras telas e estilizando a escolha dos cursos

--- a/escolas.html
+++ b/escolas.html
@@ -26,8 +26,10 @@
     <section class="schools">
         <div class="container">
             <div class="info">
-                <h2>Está precisando de um professor ?</h2>
-                <p>Entre em contato com uma das escolas mais reconhecidas do mercado!</p>
+                <div>
+                    <h2>Está precisando de um professor ?</h2>
+                    <p>Entre em contato com uma das escolas mais reconhecidas do mercado!</p>
+                </div>
             </div>
             <div class="school">
                 <a href="https://escolarevolution.com.br/" target="_blank">
