--- a/sobre.html
+++ b/sobre.html
@@ -26,8 +26,10 @@
     <section class="sobre">
         <div class="container">
             <div class="info">
-                <h2>Conheça melhor a computação gráfica</h2>
-                <p>Nessa página temos uma trilha com expliações e curiosidades sobre o mundo da computação gráfica</p>
+                <div>
+                    <h2>Conheça melhor a computação gráfica</h2>
+                    <p>Nessa página temos uma trilha com expliações e curiosidades sobre o mundo da computação gráfica</p>
+                </div>
             </div>
 
             <iframe id="id_iframe" src="https://www.youtube.com/embed/-4_OU95nKuU" frameborder="0"
