--- a/cursos.html
+++ b/cursos.html
@@ -24,15 +24,35 @@
     <section class="cursos">
         <div class="container">
             <div class="info">
-                <h2>Está precisando de um professor ?</h2>
-                <p>Entre em contato com uma das escolas mais reconhecidas do mercado!</p>
+                <div>
+                    <h2>Está precisando de um professor ?</h2>
+                    <p>Entre em contato com uma das escolas mais reconhecidas do mercado!</p>
+                </div>
+                <select id="id_tema" onchange="changeTheme()">
+                    <option selected disabled>Selecione o tema</option>
+                    <option value="1">3D</option>
+                    <option value="2">2D</option>
+                </select>
             </div>
-            <select id="id_tema">
-                <option value="1">3D</option>
-                <option value="2">2D</option>
-            </select>
 
-            <div class="choose-course">
+            <div id="3d_menu" class="choose-course" style="display: none;">
+                <div class="bt-course">
+                    <img src="img/icons/zbrush-lilas.svg">
+                    <p>Zbrush</p>
+                </div>
+
+                <div class="bt-course">
+                    <img src="img/icons/3d-lilas.svg">
+                    <p>Maya</p>
+                </div>
+
+                <div class="bt-course">
+                    <img src="img/icons/lines-lilas.svg">
+                    <p>Texture</p>
+                </div>
+            </div>
+
+            <div id="2d_menu" class="choose-course" style="display: none">
                 <div class="bt-course">
                     <img src="img/icons/zbrush-lilas.svg">
                     <p>Zbrush</p>
