--- a/cursos.html
+++ b/cursos.html
@@ -54,18 +54,23 @@
 
             <div id="2d_menu" class="choose-course" style="display: none">
                 <div class="bt-course">
-                    <img src="img/icons/zbrush-lilas.svg">
-                    <p>Zbrush</p>
+                    <img src="img/icons/artist-lilas.svg">
+                    <p>Básico</p>
                 </div>
 
                 <div class="bt-course">
-                    <img src="img/icons/3d-lilas.svg">
-                    <p>Maya</p>
+                    <img src="img/icons/ninja-lilas.svg">
+                    <p>Personagens</p>
                 </div>
 
                 <div class="bt-course">
-                    <img src="img/icons/lines-lilas.svg">
-                    <p>Texture</p>
+                    <img src="img/icons/cenario-lilas.svg">
+                    <p>Cenários</p>
+                </div>
+
+                <div class="bt-course">
+                    <img src="img/icons/pen-tablet-lilas.svg">
+                    <p>Pintura Digital</p>
                 </div>
             </div>
         </div>
@@ -73,3 +78,4 @@
 </body>
 </html>
 <script src="js/sessao.js"></script>
+<script src="js/course/functions.js"></script>
