Att tela de cursos, adicionando videos

--- a/cursos.html
+++ b/cursos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/course/style.css">
     <title>Cursos</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -36,7 +38,7 @@
             </div>
 
             <div id="3d_menu" class="choose-course" style="display: none;">
-                <div class="bt-course">
+                <div class="bt-course" id="bt-zbrush">
                     <img src="img/icons/zbrush-lilas.svg">
                     <p>Zbrush</p>
                 </div>
@@ -73,9 +75,69 @@
                     <p>Pintura Digital</p>
                 </div>
             </div>
+
+            <section class="course">
+                <div class="title">
+                    <h2>Curso</h2>
+                    <p>creditos</p>
+                </div>
+
+                <div class="videos">
+                    <iframe id="id_iframe" src="https://www.youtube.com/embed/-4_OU95nKuU" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+
+                    <div class="video">
+                        <img src="https://img.youtube.com/vi/-4_OU95nKuU/mqdefault.jpg">
+                        <div class="details-video">
+                            <h2>O que é?</h2>
+                            <p>Nesse vídeo é explicado de forma rapida o que é e como funciona a computação gráfica.</p>
+                            <a href="https://www.youtube.com/user/nerdologia" target="blank">Créditos:
+                                <u>https://www.youtube.com/user/nerdologia</u></a>
+                        </div>
+                    </div>
+                    <div class="video">
+                        <img src="https://img.youtube.com/vi/-4_OU95nKuU/mqdefault.jpg">
+                        <div class="details-video">
+                            <h2>O que é?</h2>
+                            <p>Nesse vídeo é explicado de forma rapida o que é e como funciona a computação gráfica.</p>
+                            <a href="https://www.youtube.com/user/nerdologia" target="blank">Créditos:
+                                <u>https://www.youtube.com/user/nerdologia</u></a>
+                        </div>
+                    </div>
+                    <div class="video">
+                        <img src="https://img.youtube.com/vi/-4_OU95nKuU/mqdefault.jpg">
+                        <div class="details-video">
+                            <h2>O que é?</h2>
+                            <p>Nesse vídeo é explicado de forma rapida o que é e como funciona a computação gráfica.</p>
+                            <a href="https://www.youtube.com/user/nerdologia" target="blank">Créditos:
+                                <u>https://www.youtube.com/user/nerdologia</u></a>
+                        </div>
+                    </div>
+                    <div class="video">
+                        <img src="https://img.youtube.com/vi/-4_OU95nKuU/mqdefault.jpg">
+                        <div class="details-video">
+                            <h2>O que é?</h2>
+                            <p>Nesse vídeo é explicado de forma rapida o que é e como funciona a computação gráfica.</p>
+                            <a href="https://www.youtube.com/user/nerdologia" target="blank">Créditos:
+                                <u>https://www.youtube.com/user/nerdologia</u></a>
+                        </div>
+                    </div>
+                    <div class="video">
+                        <img src="https://img.youtube.com/vi/-4_OU95nKuU/mqdefault.jpg">
+                        <div class="details-video">
+                            <h2>O que é?</h2>
+                            <p>Nesse vídeo é explicado de forma rapida o que é e como funciona a computação gráfica.</p>
+                            <a href="https://www.youtube.com/user/nerdologia" target="blank">Créditos:
+                                <u>https://www.youtube.com/user/nerdologia</u></a>
+                        </div>
+                    </div>
+                </div>
+        </div>
         </div>
     </section>
 </body>
+
 </html>
 <script src="js/sessao.js"></script>
 <script src="js/course/functions.js"></script>
