Adicionando novo botão de curso e arquivo de dados dos cursos

--- a/cursos.html
+++ b/cursos.html
@@ -52,6 +52,11 @@
                     <img src="img/icons/lines-lilas.svg">
                     <p>Texture</p>
                 </div>
+
+                <div class="bt-course">
+                    <img src="img/icons/mtr-lilas.svg">
+                    <p>M.T.R.</p>
+                </div>
             </div>
 
             <div id="2d_menu" class="choose-course" style="display: none">
@@ -83,7 +88,7 @@
                 </div>
 
                 <div class="videos">
-                    <iframe id="id_iframe" src="https://www.youtube.com/embed/-4_OU95nKuU" frameborder="0"
+                    <iframe id="id_iframe" src="https://www.youtube.com/embed/xpCM3Y7vuX4" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
 
