Corrigindo funcionalidade de troca de videos da pagina dos cursos

--- a/cursos.html
+++ b/cursos.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="info">
                 <div>
-                    <h2>Está precisando de um professor ?</h2>
+                    <h2>Já conhece o CG né ? </h2>
                     <p>Escolha um tema ao lado e aproveite os cursos disponíveis!</p>
                 </div>
                 <select id="id_tema" onchange="changeTheme()">
