Adicionando a função de scroll ao selecionar os videos

--- a/sobre.html
+++ b/sobre.html
@@ -120,26 +120,26 @@
 
 <script>
     document.getElementById('video1').onclick = function () {
-        changeVideo('id_iframe','-4_OU95nKuU');
+        changeVideo('id_iframe','-4_OU95nKuU','video1');
     }
 
     document.getElementById('video2').onclick = function () {
-        changeVideo('id_iframe','_0Y6drDRLqA');
+        changeVideo('id_iframe','_0Y6drDRLqA','video2');
     }
 
     document.getElementById('video3').onclick = function () {
-        changeVideo('id_iframe','to2eLxAx4TU');
+        changeVideo('id_iframe','to2eLxAx4TU','video3');
     }
 
     document.getElementById('video4').onclick = function () {
-        changeVideo('id_iframe','OxIKvWDYUsk');
+        changeVideo('id_iframe','OxIKvWDYUsk','video4');
     }
 
     document.getElementById('video5').onclick = function () {
-        changeVideo('id_iframe','C1c7Ymw2V90');
+        changeVideo('id_iframe','C1c7Ymw2V90','video5');
     }
 
     document.getElementById('video6').onclick = function () {
-        changeVideo('id_iframe','pTk8rrt87tw');
+        changeVideo('id_iframe','pTk8rrt87tw','video6');
     }
 </script>
