Refatorando funções da tela de cursos

--- a/cursos.html
+++ b/cursos.html
@@ -99,4 +99,5 @@
 
 </html>
 <script src="js/sessao.js"></script>
+<script src="js/course/dados.js"></script>
 <script src="js/course/functions.js"></script>
