--- a/projeto-site/public/login.html
+++ b/projeto-site/public/login.html
@@ -83,6 +83,7 @@
 <script>
     window.onload = function () {
         sessionStorage.clear();
+        conection();
     }
 
     function cadastrar() {
@@ -155,18 +156,15 @@
         idIcon.style.display = 'none';
     }
 
-    window.onload = verificarTela;
-    function verificarTela() {
-        var windowWidth = window.innerWidth;
-        var windowHeight = window.innerHeight;
 
-        if (windowWidth <= 600) {
-            document.getElementById('icon_menu1').classList.remove('fa-3x');
-            document.getElementById('icon_menu1').classList.add('fa-2x');
-            document.getElementById('icon_menu2').classList.remove('fa-3x');
-            document.getElementById('icon_menu2').classList.add('fa-2x');
-            document.getElementById('icon_menu3').classList.remove('fa-3x');
-            document.getElementById('icon_menu3').classList.add('fa-2x');
-        }
-    }
+    // function conection () {
+    //     var online = navigator.onLine;
+
+    //     if (online) {
+    //         sessionStorage.setItem('online', true);
+    //     } else {
+    //         sessionStorage.setItem('online', false);
+    //     }
+    // }
+
 </script>
