--- a/projeto-site/public/login.html
+++ b/projeto-site/public/login.html
@@ -39,9 +39,10 @@
                 <div class="card">
                     <img src="img/icons/3d-lilas.svg">
                     <p>Login</p>
+                    <span id="id_msg_login" style="align-self: center; font-size: 14px;"></span>
                     <form id="form_login" method="post" onsubmit="return entrar()">
-                        <input type="email" name="login" id="id_login_email" placeholder="Email:">
-                        <input type="password" name="senha" id="id_login_senha" placeholder="Senha:">
+                        <input type="email" name="login" id="id_login_email" required placeholder="Email:">
+                        <input type="password" name="senha" id="id_login_senha" required minlength="5" placeholder="Senha:">
                         <button>LOGIN</button>
                         <p id="cadastro">Cadastre-se</p>
                     </form>
@@ -58,10 +59,11 @@
                 <div class="card">
                     <img src="img/icons/3d-lilas.svg">
                     <p>Sign in</p>
+                    <span id="id_msg_cadastro" style="align-self: center; font-size: 14px;"></span>
                     <form id="form_cadastro" method="POST" onsubmit="return cadastrar()">
-                        <input type="text" name="nome" id="id_signin_nome" placeholder="Nome:">
-                        <input type="email" name="login" id="id_signin_email" placeholder="Email:">
-                        <input type="password" name="senha" id="id_signin_senha" placeholder="Senha:">
+                        <input type="text" name="nome" id="id_signin_nome" required minlength="5" placeholder="Nome:">
+                        <input type="email" name="login" id="id_signin_email" required placeholder="Email:">
+                        <input type="password" name="senha" id="id_signin_senha" required minlength="5" placeholder="Senha:">
                         <button>CADASTRAR</button>
                         <p id="voltar">Cancelar</p>
                     </form>
@@ -101,6 +103,11 @@
             } else {
 
                 console.log('Erro de cadastro!');
+                id_singin_nome.style.borderColor = `red`;
+                id_singin_email.style.borderColor = `red`;
+                id_singin_senha.style.borderColor = `red`;
+
+                id_msg_cadastro.innerText = "Dados inválidos!"
                 response.text().then(function (resposta) {
                     // div_erro.innerHTML = resposta;
                     alert(resposta)
@@ -134,7 +141,10 @@
             } else {
 
                 console.log('Erro de login!');
+                id_login_email.style.borderColor = `red`;
+                id_login_senha.style.borderColor = `red`;
 
+                id_msg_login.innerText = "Email ou Senha inválidos!";
                 resposta.text().then(texto => {
                     console.error(texto);
                     finalizar_aguardar(form_login, img_aguarde_login);
