--- a/projeto-site/public/login.html
+++ b/projeto-site/public/login.html
@@ -120,9 +120,10 @@
         return false;
     }
     
-    var online = navigator.onLine;
-    alert(online)
-    console.log(navigator.onLine)
+    // var online = navigator.onLine;
+    var online = true;
+    // alert(online)
+    console.log(online);
 
     function entrar() {
 
